tests/codegen/fail/unsupported_for_build.stderr
error: tests/codegen/fail/unsupported_for_build.ql:2:5: LLVM IR backend foundation does not support `for` lowering yet
      for value in 0 {
      ^^^^^^^^
error: tests/codegen/fail/unsupported_for_build.ql:2:9: could not resolve LLVM type for local `_t0`
      for value in 0 {
          ^^^^^
error: tests/codegen/fail/unsupported_for_build.ql:2:5: could not infer LLVM type for MIR local `_t0`
      for value in 0 {
      ^^^^^^^^
  note: this usually means the current MIR shape is not part of the P4 backend foundation support matrix
